--- a/src/assest/settings.json
+++ b/src/assest/settings.json
@@ -125,7 +125,13 @@
     "eg": "<:eg:1182240385121132564>",
     "it": "<:it:1182240389130891324>",
     "ru": "<:ru:1182240393602027640>",
-    "gr": "<:gr:1182241420619300925>"
+    "gr": "<:gr:1182241420619300925>",
+    "poll": "<:poll:1186968553442779197>",
+    "ping": "<:past:1087153779620712522> ",
+    "uptime": "<:uptime:1087152721234239548>",
+    "parfaitIcon": "<:Parfait_Icon_tiny:1189515262521778206>",
+    "package": "<:package:1189522045659271251>",
+    "slash": "<:slash:1189522042442240040>"
   },
 
   "colors": {
