--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@discordjs/rest": "^2.0.0",
     "bad-words": "^3.0.4",
     "canvas": "^2.11.2",
+    "chart.js": "^3.7.0",
+    "chartjs-node-canvas": "^4.1.6",
+    "cookie-parser": "^1.4.6",
     "detect-language": "^2.0.1",
     "discord.js": "^13.7.0",
     "express": "^4.18.2",
@@ -21,7 +24,7 @@
     "langdetect": "^0.2.1",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^7.6.7",
+    "mongoose": "^7.6.4",
     "node-cron": "^3.0.2",
     "openai": "^4.16.1",
     "translate-google": "^1.5.0"
